--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
     <style>
       body {
         display: flex;
-        background-color: rgb(85, 172, 248);
+        background-color: #ebbf6e;
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -29,6 +29,32 @@
       .btn-list div {
         width: 50%;
       }
+
+      .btn {
+        display: inline-block;
+        margin: 10px;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: #fff;
+        text-decoration: none;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      .btn:hover {
+        background-color: #0056b3;
+      }
+
+      .info {
+        margin: 10px;
+        padding: 10px 20px;
+        background-color: rgba(255, 255, 255, 0.7);
+        border: 1px solid green;
+        border-radius: 5px;
+        color: green;
+        cursor: default;
+      }
     </style>
   </head>
   <body>
@@ -38,13 +64,14 @@
       <section class="btn-list">
         <div>
           <p>¿Eres nuevo?</p>
-          <button><a href="/register">Regístrate</a></button>
+          <a class="btn" href="/register">Regístrate</a>
         </div>
         <div>
           <p>¿Ya tienes una cuenta?</p>
-          <button><a href="/login">Inicia Sesión</a></button>
+          <a class="btn" href="/login">Inicia Sesión</a>
         </div>
       </section>
+      <p class="info">Podrás generar hasta 5 acortadores privados e ilimitados acortadores públicos</p>
     </div>
   </body>
 </html>
