--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,20 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>URL-SHORTEN - Registro</title>
-</head>
-<body>
-  <h1>Registro de Usuario</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>URL-SHORTEN - Registro</title>
+    <style>
+      body {
+        display: flex;
+        background-color: #ebbf6e;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+      }
 
-  <% if (error) { %>
-    <p><%= error %></p>
-  <% } %>
+      form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
 
-  <form action="/register" method="post">
-    <input type="text" id="username" name="username" required>
-    <button type="submit">Registro</button>
-  </form>
-</body>
+      .error-validation {
+        margin: 10px;
+        padding: 10px 20px;
+        background-color: rgba(255, 255, 255, 0.7);
+        border: 1px solid red;
+        border-radius: 5px;
+        color: red;
+        cursor: default;
+      }
+
+      label {
+        padding-bottom: 2px;
+      }
+
+      .error-msg {
+        color: red;
+        font-size: 10px;
+        height: 10px;
+      }
+
+      .loading {
+        font-size: 15px;
+        color: green;
+        margin: 10px;
+        padding: 10px 20px;
+      }
+
+      hr.solid {
+        border-top: 1.5px solid black;
+        border-bottom: 1.5px solid black;
+        width: 40%;
+      }
+
+      .btn-register {
+        display: inline-block;
+        margin: 10px;
+        padding: 10px 20px;
+        background-color: #24b416;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      .btn-register:disabled {
+        background-color: #a0f598;
+        cursor: default;
+      }
+
+      .btn-register:disabled:hover {
+        background-color: #a0f598;
+        cursor: default;
+      }
+
+      .btn-register:hover {
+        background-color: #27991d;
+      }
+
+      .btn {
+        display: inline-block;
+        margin: 10px;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: #fff;
+        text-decoration: none;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      .btn:hover {
+        background-color: #0056b3;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Registro de Usuario</h1>
+
+    <% if(error) { %>
+    <span class="error-validation"><%= error %></span>
+    <% } %>
+
+    <form action="/register" method="post" id="register-form">
+      <label for="username">Nombre de usuario</label>
+      <input type="text" id="username" name="username" required />
+      <span id="u-error" class="error-msg"></span>
+
+      <label for="pre-password">Contraseña</label>
+      <input type="password" id="pre-password" name="pre-password" required />
+      <span id="pp-error" class="error-msg"></span>
+
+      <label for="password">Repetir Contraseña</label>
+      <input type="password" id="password" name="password" required disabled />
+      <span id="p-error" class="error-msg"></span>
+
+      <button type="submit" id="btn-register" class="btn-register" disabled>
+        Crear Usuario
+      </button>
+    </form>
+
+    <hr class="solid" />
+
+    <p>¿Ya tienes una cuenta?</p>
+    <a class="btn" href="/login">Inicia Sesión</a>
+
+    <!-- Scripts -->
+
+    <script>
+      class Form {
+        form = document.getElementById('register-form');
+        username = document.getElementById('username');
+        prePassword = document.getElementById('pre-password');
+        password = document.getElementById('password');
+        btnRegister = document.getElementById('btn-register');
+        __prePassword = '';
+        __valid = {
+          a: false,
+          b: false,
+          c: false,
+        };
+
+        btnDisabled() {
+          this.btnRegister.disabled = !(
+            this.__valid.a &&
+            this.__valid.b &&
+            this.__valid.c
+          );
+        }
+
+        listen() {
+          this.username.addEventListener('input', (e) => {
+            const value = e.target.value;
+            const msg = document.getElementById('u-error');
+
+            if (value.length < 6) {
+              msg.textContent =
+                'El nombre de usuario debe contener un mínimo de 6 caracteres';
+              this.__valid.a = false;
+              this.btnDisabled();
+            } else {
+              msg.textContent = '';
+              this.__valid.a = true;
+              this.btnDisabled();
+            }
+          });
+
+          this.prePassword.addEventListener('input', (e) => {
+            const value = e.target.value;
+            const msg = document.getElementById('pp-error');
+            const exp = /^(?=.*[A-Za-z])(?=.*\d).{8,}$/;
+
+            if (!exp.test(value)) {
+              msg.textContent =
+                'La contraseña debe contener letras, números y un mínimo de 8 caracteres';
+              this.__valid.b = false;
+              this.btnDisabled();
+            } else {
+              msg.textContent = '';
+              this.__prePassword = value;
+              this.password.disabled = false;
+              this.__valid.b = true;
+              this.btnDisabled();
+            }
+          });
+
+          this.password.addEventListener('input', (e) => {
+            const value = e.target.value;
+            const msg = document.getElementById('p-error');
+
+            if (this.__prePassword !== value) {
+              msg.textContent = 'Las contraseñas no coinciden';
+              this.__valid.c = false;
+              this.btnDisabled();
+            } else {
+              msg.textContent = '';
+              this.__valid.c = true;
+              this.btnDisabled();
+            }
+          });
+
+          this.form.addEventListener('submit', () => {
+            this.btnRegister.outerHTML =
+              '<span class="loading">Espere un momento por favor...</span>';
+          });
+        }
+      }
+
+      new Form().listen();
+    </script>
+  </body>
 </html>
