Modularización de archivos de estilos y scripts

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,99 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL-SHORTEN - Iniciar Sesión</title>
-    <style>
-      body {
-        display: flex;
-        background-color: #ebbf6e;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-      }
-
-      form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .error-validation {
-        margin: 10px;
-        padding: 10px 20px;
-        background-color: rgba(255, 255, 255, 0.7);
-        border: 1px solid red;
-        border-radius: 5px;
-        color: red;
-        cursor: default;
-      }
-
-      label {
-        padding-bottom: 2px;
-      }
-
-      .error-msg {
-        color: red;
-        font-size: 10px;
-        height: 10px;
-      }
-
-      .loading {
-        font-size: 15px;
-        color: green;
-        margin: 10px;
-        padding: 10px 20px;
-      }
-
-      hr.solid {
-        border-top: 1.5px solid black;
-        border-bottom: 1.5px solid black;
-        width: 40%;
-      }
-
-      .btn-login {
-        display: inline-block;
-        margin: 10px;
-        padding: 10px 20px;
-        background-color: #24b416;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-
-      .btn-login:disabled {
-        background-color: #a0f598;
-        cursor: default;
-      }
-
-      .btn-login:disabled:hover {
-        background-color: #a0f598;
-        cursor: default;
-      }
-
-      .btn-login:hover {
-        background-color: #27991d;
-      }
-
-      .btn {
-        display: inline-block;
-        margin: 10px;
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: #fff;
-        text-decoration: none;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-
-      .btn:hover {
-        background-color: #0056b3;
-      }
-    </style>
+    <link rel="stylesheet" href="public/css/login-style.css" />
   </head>
   <body>
     <h1>Iniciar Sesión</h1>
@@ -125,63 +33,6 @@
     <a class="btn" href="/register">Regístrate</a>
 
     <!-- Scripts -->
-    <script>
-      class Form {
-        form = document.getElementById('login-form');
-        username = document.getElementById('username');
-        password = document.getElementById('password');
-        btnRegister = document.getElementById('btn-login');
-        __valid = {
-          a: false,
-          b: false,
-        };
-
-        btnDisabled() {
-          this.btnRegister.disabled = !(this.__valid.a && this.__valid.b);
-        }
-
-        listen() {
-          this.username.addEventListener('input', (e) => {
-            const value = e.target.value;
-            const msg = document.getElementById('u-error');
-
-            if (value.length < 6) {
-              msg.textContent =
-                'El nombre de usuario debe contener un mínimo de 6 caracteres';
-              this.__valid.a = false;
-              this.btnDisabled();
-            } else {
-              msg.textContent = '';
-              this.__valid.a = true;
-              this.btnDisabled();
-            }
-          });
-
-          this.password.addEventListener('input', (e) => {
-            const value = e.target.value;
-            const msg = document.getElementById('p-error');
-            const exp = /^(?=.*[A-Za-z])(?=.*\d).{8,}$/;
-
-            if (!exp.test(value)) {
-              msg.textContent =
-                'La contraseña debe contener letras, números y un mínimo de 8 caracteres';
-              this.__valid.b = false;
-              this.btnDisabled();
-            } else {
-              msg.textContent = '';
-              this.__valid.b = true;
-              this.btnDisabled();
-            }
-          });
-
-          this.form.addEventListener('submit', () => {
-            this.btnRegister.outerHTML =
-              '<span class="loading">Espere un momento por favor...</span>';
-          });
-        }
-      }
-
-      new Form().listen();
-    </script>
+    <script src="public/js/login-script.js"></script>
   </body>
 </html>
