--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL-SHORTEN - Inicio</title>
-    <link rel="stylesheet" href="public/css/index-style.css">
+    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="stylesheet" href="public/css/index-style.css" />
   </head>
   <body>
     <div class="container">
@@ -20,7 +21,10 @@
           <a class="btn" href="/login">Inicia Sesión</a>
         </div>
       </section>
-      <p class="info">Podrás generar hasta 5 acortadores privados e ilimitados acortadores públicos</p>
+      <p class="info">
+        Podrás generar hasta 5 acortadores privados y 10 acortadores
+        públicos
+      </p>
     </div>
   </body>
 </html>
