--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL-SHORTEN - Iniciar Sesión</title>
+    <link rel="stylesheet" href="public/css/style.css" />
     <link rel="stylesheet" href="public/css/login-style.css" />
   </head>
   <body>
