Funcionalidades de Inicio de Sesion y redirecciones completas

--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a href="/" class="btn">Volver al Inicio</a>
-
+    <h1><%= token %></h1>
     <% if(error) { %>
       <h1><%= error %></h1>
     <% } else { %>
