--- a/src/public/css/dashboard-style.css
+++ b/src/public/css/dashboard-style.css
@@ -92,3 +92,13 @@ td {
   border: 1px solid black;
   padding: 8px;
 }
+
+.info {
+  margin: 10px;
+  padding: 10px 20px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: 1px solid green;
+  border-radius: 5px;
+  color: green;
+  cursor: default;
+}
