--- a/src/views/finish_session.ejs
+++ b/src/views/finish_session.ejs
@@ -13,6 +13,7 @@
     <hr class="solid" />
     <p>Para seguir navegando, puede elegir una de las opciones</p>
     <a href="/login" class="btn">Iniciar Sesión</a>
+    <a href="/register" class="btn">Crear Cuenta</a>
     <a href="/" class="btn">Volver al Inicio</a>
   </body>
 </html>
