Funcionalidad para cerrar sesión

--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="public/css/dashboard-style.css" />
   </head>
   <body>
-    <a href="/" class="btn">Cerrar Sesión</a>
+    <button class="btn" onclick="finishSession()">Cerrar Sesión</button>
     <h1>¡Bienvenido <em><%= user.username %></em>!</h1>
 
     <section>
