--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL-SHORTEN - Inicio</title>
-    <link rel="stylesheet" href="public/css/style.css" />
-    <link rel="stylesheet" href="public/css/index-style.css" />
+    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/public/css/index-style.css" />
   </head>
   <body>
     <div class="container">
@@ -22,8 +22,7 @@
         </div>
       </section>
       <p class="info">
-        Podrás generar hasta 5 acortadores privados y 10 acortadores
-        públicos
+        Podrás generar hasta 5 acortadores privados y 10 acortadores públicos
       </p>
     </div>
   </body>
