--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL-SHORTEN - Iniciar Sesión</title>
-    <link rel="stylesheet" href="public/css/style.css" />
-    <link rel="stylesheet" href="public/css/login-style.css" />
+    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/public/css/login-style.css" />
   </head>
   <body>
     <h1>Iniciar Sesión</h1>
@@ -34,6 +34,6 @@
     <a class="btn" href="/register">Regístrate</a>
 
     <!-- Scripts -->
-    <script src="public/js/login-script.js"></script>
+    <script src="/public/js/login-script.js"></script>
   </body>
 </html>
