--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL-SHORTEN - Registro</title>
-    <link rel="stylesheet" href="public/css/style.css" />
-    <link rel="stylesheet" href="public/css/register-style.css" />
+    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/public/css/register-style.css" />
   </head>
   <body>
     <h1>Registro de Usuario</h1>
@@ -38,6 +38,6 @@
     <a class="btn" href="/login">Inicia Sesión</a>
 
     <!-- Scripts -->
-    <script src="public/js/register-script.js"></script>
+    <script src="/public/js/register-script.js"></script>
   </body>
 </html>
